[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/MonsterHead/bhedb1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/MonsterHead/bhedc1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MonsterHead/bhedd1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MonsterHead/bhede1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/MonsterHead/bheda1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/MonsterHead/bhedi0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MonsterHead/bhedh0.png" type="Texture" id=7]
[ext_resource path="res://Sprites/MonsterHead/bhedk0.png" type="Texture" id=8]
[ext_resource path="res://Sprites/MonsterHead/bhedj0.png" type="Texture" id=9]
[ext_resource path="res://Sprites/MonsterHead/bhedf0.png" type="Texture" id=10]
[ext_resource path="res://Sprites/MonsterHead/bhedg0.png" type="Texture" id=11]
[ext_resource path="res://Scenes/BossEnemyMonsterHead.gd" type="Script" id=12]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="CylinderShape" id=3]
height = 4.9758
radius = 10.0571

[sub_resource type="CylinderShape" id=4]
height = 4.70892
radius = 3.7164

[node name="BossEnemyMonsterHead" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.016746, 0 )
script = ExtResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, 0, 1.8536, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 2, 0, 0, 0, 4, 0, 0, 0, 2, -0.0228414, -0.113732, -0.0189123 )
centered = false
offset = Vector2( -25, 0 )
pixel_size = 0.0192
billboard = 2
frames = SubResource( 2 )
animation = "walk"
frame = 2
playing = true
__meta__ = {
"_editor_description_": "4"
}

[node name="Visual" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.86864, 0 )
enabled = true
cast_to = Vector3( 0, 0, -30 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Aural" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Aural"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66491, 0 )
shape = SubResource( 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="HitZone" type="Area" parent="."]

[node name="CollisonShape2" type="CollisionShape" parent="HitZone"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Aural" to="." method="_on_Aural_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="HitZone" to="." method="_on_HitZone_body_entered"]
